trying to flick flickering issue on touchscreen devices

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -7,7 +7,7 @@ body {
 	padding: 0;
 	margin: 0;
 	text-align: center;
-	user-select:none;
+	/*user-select: none;*/
 }
 
 #headerContainer {
